# personal_website

./: .env.example  .gitignore  README.md  TODO.md  games.csv  next.config.ts  package-lock.json  package.json  requirements.txt  sessions.csv  vercel.json  wishlist.csv
.claude/: CLAUDE.md  settings.json
.claude/tools/: README.md  now_playing.py  session.py  test_now_playing.py  test_session.py  test_wikipedia.py  wikipedia.py
.github/workflows/: ci.yml
api/: README.md  alembic.ini  index.py  pyproject.toml
api/alembic/: env.py
api/alembic/versions/: 511df41509b9_one_open_session_per_game.py  8f881f29b261_igdb_token_cache_and_rate_limits.py  f985740c0df9_profiles_id_references_auth_users.py  fe5fe4c238ae_baseline_schema.py
api/app/: __init__.py  main.py
api/app/core/: __init__.py  auth.py  config.py  db.py  guards.py  supabase_admin.py
api/app/models/: __init__.py  base.py  follow.py  game.py  igdb.py  profile.py  wishlist_item.py
api/app/repositories/: __init__.py  igdb.py  me.py  users.py
api/app/routers/: __init__.py  health.py  igdb.py  me.py  users.py
api/app/schemas/: __init__.py  igdb.py  me.py  users.py
api/app/services/: __init__.py  igdb.py  me.py  users.py
api/scripts/: bootstrap_robert.py  seed.py
api/scripts/fixtures/: games.csv
api/tests/: test_auth.py  test_db_constraints.py  test_health.py  test_igdb_api.py  test_me_api.py  test_me_service.py  test_play_state.py  test_seed_parsing.py  test_users_api.py
docs/: dev-setup.md
scripts/: cover-overrides.json  fetch-covers.ts
src/: middleware.ts
supabase/: config.toml
(+87 files in other folders)
